상대경로 수정

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       </div>
       <div class="wrapper">
         <div class="texts">
-          <img src="/images/event/naver_modoo/logo.png" alt="">
+          <img src="./images/event/naver_modoo/logo.png" alt="">
           <h3>네이버 모두 고객 전용</h3>
-          <img src="/images/event/naver_modoo/main_title.png" alt="">
+          <img src="./images/event/naver_modoo/main_title.png" alt="">
           <p>종료 걱정없는 가비아 클릭엔으로 새롭게 시작하세요</p>
         </div>
-        <img class="" src="/images/event/naver_modoo/heart_3.png" alt="" />
+        <img class="" src="./images/event/naver_modoo/heart_3.png" alt="" />
   
         <div class="swiper small">
           <ul class="swiper-wrapper">
@@ -65,9 +65,9 @@
         </div>
       </div>
       <div class="images">
-        <img class="" src="/images/event/naver_modoo/heart_1.png" alt="" />
-        <img class="" src="/images/event/naver_modoo/heart_2.png" alt="" />
-        <img class="" src="/images/event/naver_modoo/heart_4.png" alt="" />
+        <img class="" src="./images/event/naver_modoo/heart_1.png" alt="" />
+        <img class="" src="./images/event/naver_modoo/heart_2.png" alt="" />
+        <img class="" src="./images/event/naver_modoo/heart_4.png" alt="" />
       </div>
     </section>
     <section class="section-skins">
@@ -279,7 +279,7 @@
         <ul>
           <li>
             <div class="image">
-              <img src="/images/event/naver_modoo/review_1.png" alt="">
+              <img src="./images/event/naver_modoo/review_1.png" alt="">
             </div>
             <p>
               블로그 꾸미는 것처럼<br>
@@ -289,7 +289,7 @@
           </li>
           <li>
             <div class="image">
-              <img src="/images/event/naver_modoo/review_2.png" alt="">
+              <img src="./images/event/naver_modoo/review_2.png" alt="">
             </div>
             <p>
               전문가가 아니어도<br>
@@ -299,7 +299,7 @@
           </li>
           <li>
             <div class="image">
-              <img src="/images/event/naver_modoo/review_3.png" alt="">
+              <img src="./images/event/naver_modoo/review_3.png" alt="">
             </div>
             <p>
               클릭엔을 선택하길<br>
@@ -315,7 +315,7 @@
         <div class="wrapper">
           <h2>
             <span>
-              <img src="/images/event/naver_modoo/logo_wh.png" alt="">
+              <img src="./images/event/naver_modoo/logo_wh.png" alt="">
               고객님께만
             </span>
             <span>제공하는 혜택</span>
@@ -333,23 +333,23 @@
             <ul class="swiper-wrapper">
               <li class="swiper-slide">
                 <strong>네이버쇼핑</strong>
-                <img src="/images/event/naver_modoo/free_1.png" alt="">
+                <img src="./images/event/naver_modoo/free_1.png" alt="">
               </li>
               <li class="swiper-slide">
                 <strong>네이버페이</strong>
-                <img src="/images/event/naver_modoo/free_2.png" alt="">
+                <img src="./images/event/naver_modoo/free_2.png" alt="">
               </li>
               <li class="swiper-slide">
                 <strong>네이버톡톡</strong>
-                <img src="/images/event/naver_modoo/free_3.png" alt="">
+                <img src="./images/event/naver_modoo/free_3.png" alt="">
               </li>
               <li class="swiper-slide">
                 <strong>네이버 지도</strong>
-                <img src="/images/event/naver_modoo/free_4.png" alt="">
+                <img src="./images/event/naver_modoo/free_4.png" alt="">
               </li>
               <li class="swiper-slide">
                 <strong>네이버 로그인</strong>
-                <img src="/images/event/naver_modoo/free_5.png" alt="">
+                <img src="./images/event/naver_modoo/free_5.png" alt="">
               </li>
             </ul>
           </div>
@@ -362,10 +362,10 @@
             <h2>클릭엔 50% 할인</h2>
             <p>프라이빗 할인 쿠폰 적용 시 월 3천원대로 사이트 완성</p>
           </div>
-          <img src="/images/event/naver_modoo/discount.png" alt="">
+          <img src="./images/event/naver_modoo/discount.png" alt="">
           <picture>
-            <source media="(max-width:640px)" srcset="/images/event/naver_modoo/pricing_s.png">
-            <img src="/images/event/naver_modoo/pricing.png" alt="">
+            <source media="(max-width:640px)" srcset="./images/event/naver_modoo/pricing_s.png">
+            <img src="./images/event/naver_modoo/pricing.png" alt="">
           </picture>
         </div>
       </section>
@@ -376,7 +376,7 @@
             <h2>사이트 제작 지원</h2>
             <p>상단 메뉴부터 하단 회사 정보까지 1:1 맞춤 구성</p>
           </div>
-          <img src="/images/event/naver_modoo/customize.png" alt="">
+          <img src="./images/event/naver_modoo/customize.png" alt="">
         </div>
       </section>
       <section class="section-domain dark benefit">
@@ -389,7 +389,7 @@
               <span>국내 점유율 1위 가비아로 안전하게</span>
             </p>
           </div>
-          <img src="/images/event/naver_modoo/domain.png" alt="">
+          <img src="./images/event/naver_modoo/domain.png" alt="">
         </div>
       </section>
       <section class="section-consulting dark benefit">
@@ -408,7 +408,7 @@
                 <div>
                   <small>N쇼핑 순위&최저가</small>
                   <strong>데이터 트래킹</strong>
-                  <img src="/images/event/naver_modoo/consulting_1.png" alt="">
+                  <img src="./images/event/naver_modoo/consulting_1.png" alt="">
                 </div>
                 <ol>
                   <li>N쇼핑 자연 노출 순위 관리</li>
@@ -419,7 +419,7 @@
                 <div>
                   <small>희망순위 착붙 고정</small>
                   <strong>자동 입찰</strong>
-                  <img src="/images/event/naver_modoo/consulting_2.png" alt="">
+                  <img src="./images/event/naver_modoo/consulting_2.png" alt="">
                 </div>
                 <ol>
                   <li>자체 개발 솔루션을 통한 광고 순위 관리</li>
@@ -430,7 +430,7 @@
                 <div>
                   <small>꼼꼼하고 확실한</small>
                   <strong>광고 관리</strong>
-                  <img src="/images/event/naver_modoo/consulting_3.png" alt="">
+                  <img src="./images/event/naver_modoo/consulting_3.png" alt="">
                 </div>
                 <ol>
                   <li>국내 매체 대행 수수료 0원</li>
@@ -441,7 +441,7 @@
                 <div>
                   <small>확실한 경쟁 우위</small>
                   <strong>키워드 관리</strong>
-                  <img src="/images/event/naver_modoo/consulting_4.png" alt="">
+                  <img src="./images/event/naver_modoo/consulting_4.png" alt="">
                 </div>
                 <ol>
                   <li>키워드 무단 사용 경쟁사 모니터링</li>
